commiting build for now

--- a/ui/html/home.html
+++ b/ui/html/home.html
@@ -10,6 +10,10 @@
             <h1>Wut Up Fam</h1>
             <p>This is served from a super basic Go server</p>
         </header>
+        <div>
+            Would you like to see my API?
+            <a href="/api">Click Me!</a>
+        </div>
     </body>
 </html>
 {{end}}
